2001-05-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Version 2.99.55-patch1

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Reworking (simplifying) DATA phase processing,
	    and quick-retry handling of socket write/read
	    failure induced closes.  There is limit of three
	    attempts on any given host for the delivery before
	    giving up entirely.  (Passing the failure to the
	    scheduler..)

2001-05-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/p-routes.cf:
	    Wrong function called to pick the flag data..

	* transports/smtp/smtp.c:
	    Fixup into pipelined error diagnostics accumulation methodology.

	* proto/newdbprocessor.in:
	    PERL 5.6.0+ specific syntax altered back to earlier syntax,
	    which even the lattest perl does support.

	* configure.in:  --with-zconfig-noload   option to disable
	    preloading of possibly existing ZCONFIG file contents
	    into configuration variables.

2001-04-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/getmxrr.c:
	    If destination has one MX, and lookup for its A yields
	    EAI_AGAIN, remember to report SS->mxcount = 0 ...

2001-04-03  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/forms/delivery:
	    Changed the URL reference to a "decode key" at
		http://www.zmailer.org/delivery-report-decoding.html

	* acconfig.h, configure.in:
	    When supporting local  _getaddrinfo_() function,
	    have a HAVE_ variable for it too!

	* include/mail.h.in, router/rfc822.c:
	    Rearranged the _CF_*** defines into the order at which
	    the router uses them -- while editing documentation,
	    and needing coherent view at the things.

	* scheduler/threads.c:
	    When running parallel TAs at same thread, remember to
	    traverse pointer chain when showing process list..
	    (verbose debugging to stderr..)

	* libc/getaddrinfo.c:
	    Present at the debug vlog file the g->gaih() return code