@@ -72,7 +72,25 @@ extern       int   getaddrinfo __((const char *, const char *, const struct addr
 typedef unsigned int socklen_t;
 #endif
 #ifndef HAVE_GETNAMEINFO
-extern       int   getnameinfo __((const struct sockaddr *, socklen_t, char *, size_t, char *, size_t, unsigned int));
+/* This is NASTY, GLIBC has changed the type after instroducing
+   this function, Sol (2.)8 has 'int', of upcoming POSIX standard
+   revision I don't know.. */
+
+#ifndef GETNAMEINFOFLAGTYPE
+# if defined(__GLIBC__) && defined(__GLIBC_MINOR__)
+#  if __GLIBC__ >= 2 && __GLIBC_MINOR__ >= 2
+	/* I am not sure that it was already 2.2(.0) that had
+	   this change, but 2.2.2 has it... */
+#   define GETNAMEINFOFLAGTYPE unsigned int
+#  else
+#   define GETNAMEINFOFLAGTYPE int
+#  endif
+# else
+#  define GETNAMEINFOFLAGTYPE int
+# endif
+#endif
+
+extern       int   getnameinfo __((const struct sockaddr *, socklen_t, char *, size_t, char *, size_t, GETNAMEINFOFLAGTYPE));
 #endif
 #ifndef HAVE_GETADDRINFO
 extern       void  freeaddrinfo __((struct addrinfo *));
