@@ -1,3 +1,9 @@
+2001-05-10  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* include/libc.h:
+	    Copy the 'GETNAMEINFOFLAGTYPE' test code into this
+	    file too from  libc/getnameinfo.c.  Bloody Solaris..
+
 2001-05-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* Makefile.in:
